--- a/index.html
+++ b/index.html
@@ -217,5 +217,6 @@
   </template>
 
   <script src = "/js/main.js" type="module"></script>
+  <script src = "/js/picture.js" type="module"></script>
 </body>
 </html>
