--- a/index.html
+++ b/index.html
@@ -218,5 +218,6 @@
 
   <script src = "/js/main.js" type="module"></script>
   <script src = "/js/picture.js" type="module"></script>
+  <script src = "/js/zoomPhoto.js" type="module"></script>
 </body>
 </html>
