--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <!-- Додавання хеш-тегів та коментаря до зображення -->
                 <fieldset class="img-upload__text text">
                   <input class="text__hashtags" name="hashtags" placeholder="#ХэшТег" required>
-                  <textarea class="text__description" name="description" placeholder="Ваш комментарий..."  maxlength="140" ></textarea>
+                  <textarea class="text__description" name="description" placeholder="Ваш комментарий..."  maxlength="140" required></textarea>
                 </fieldset>
 
                 <!-- Кнопка для отправки данных на сервер -->
