--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <section class="img-upload">
         <div class="img-upload__wrapper">
           <h2 class="img-upload__title  visually-hidden">Завантаження фотографій</h2>
-          <form class="img-upload__form" id="upload-select-image" method="post" enctype="multipart/form-data" autocomplete="off" action="https://23.javascript.pages.academy/kekstagram" autocomplete="off ">
+          <form class="img-upload__form" id="upload-select-image" method="post" enctype="multipart/form-data" autocomplete="off" action="http://localhost:3001/upload" autocomplete="off ">
 
             <!-- Початковий стан поля для завантаження зображення-->
             <fieldset class="img-upload__start">
