--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
   <script src = "/js/picture.js" type="module"></script>
   <script src = "/js/zoomPhoto.js" type="module"></script>
   <script src = "/js/slider.js" type="module"></script>
+  <script src = "/js/filter.js" type="module"></script>
   <script src = "/nouislider/nouislider.js" type="module"></script>
 </body>
 </html>
